browser-example/parser/PainlessParser.js
// Generated from browser-example/PainlessParser.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var PainlessParserListener = require('./PainlessParserListener').PainlessParserListener;
var grammarFileName = "PainlessParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, "'{'", "'}'", "'['", "']'", "'('", 
                     "')'", "'.'", "','", "';'", "'if'", "'in'", "'else'", 
                     "'while'", "'do'", "'for'", "'continue'", "'break'", 
                     "'return'", "'new'", "'try'", "'catch'", "'throw'", 
                     "'this'", "'instanceof'", "'!'", "'~'", "'*'", "'/'", 
                     "'%'", "'+'", "'-'", "'<<'", "'>>'", "'>>>'", "'<'", 
                     "'<='", "'>'", "'>='", "'=='", "'==='", "'!='", "'!=='", 
                     "'&'", "'^'", "'|'", "'&&'", "'||'", "'?'", "':'", 
                     "'::'", "'->'", "'=~'", "'==~'", "'++'", "'--'", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'^='", 
                     "'|='", "'<<='", "'>>='", "'>>>='", null, null, null, 
                     null, null, null, "'true'", "'false'", "'null'" ];

var symbolicNames = [ null, "WS", "COMMENT", "LBRACK", "RBRACK", "LBRACE", 
                      "RBRACE", "LP", "RP", "DOT", "COMMA", "SEMICOLON", 
                      "IF", "IN", "ELSE", "WHILE", "DO", "FOR", "CONTINUE", 
                      "BREAK", "RETURN", "NEW", "TRY", "CATCH", "THROW", 
                      "THIS", "INSTANCEOF", "BOOLNOT", "BWNOT", "MUL", "DIV", 
                      "REM", "ADD", "SUB", "LSH", "RSH", "USH", "LT", "LTE", 
                      "GT", "GTE", "EQ", "EQR", "NE", "NER", "BWAND", "XOR", 
                      "BWOR", "BOOLAND", "BOOLOR", "COND", "COLON", "REF", 
                      "ARROW", "FIND", "MATCH", "INCR", "DECR", "ASSIGN", 
                      "AADD", "ASUB", "AMUL", "ADIV", "AREM", "AAND", "AXOR", 
                      "AOR", "ALSH", "ARSH", "AUSH", "OCTAL", "HEX", "INTEGER", 
                      "DECIMAL", "STRING", "REGEX", "TRUE", "FALSE", "NULL", 
                      "TYPE", "ID", "DOTINTEGER", "DOTID" ];

var ruleNames =  [ "source", "afunction", "parameters", "statement", "trailer", 
                   "block", "empty", "initializer", "afterthought", "declaration", 
                   "decltype", "declvar", "trap", "delimiter", "expression", 
                   "unary", "chain", "primary", "postfix", "postdot", "callinvoke", 
                   "fieldaccess", "braceaccess", "arrayinitializer", "listinitializer", 
                   "mapinitializer", "maptoken", "arguments", "argument", 
                   "lambda", "lamtype", "funcref" ];

function PainlessParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PainlessParser.prototype = Object.create(antlr4.Parser.prototype);
PainlessParser.prototype.constructor = PainlessParser;

Object.defineProperty(PainlessParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PainlessParser.EOF = antlr4.Token.EOF;
PainlessParser.WS = 1;
PainlessParser.COMMENT = 2;
PainlessParser.LBRACK = 3;
PainlessParser.RBRACK = 4;
PainlessParser.LBRACE = 5;
PainlessParser.RBRACE = 6;
PainlessParser.LP = 7;
PainlessParser.RP = 8;
PainlessParser.DOT = 9;
PainlessParser.COMMA = 10;
PainlessParser.SEMICOLON = 11;
PainlessParser.IF = 12;
PainlessParser.IN = 13;
PainlessParser.ELSE = 14;
PainlessParser.WHILE = 15;
PainlessParser.DO = 16;
PainlessParser.FOR = 17;
PainlessParser.CONTINUE = 18;
PainlessParser.BREAK = 19;
PainlessParser.RETURN = 20;
PainlessParser.NEW = 21;
PainlessParser.TRY = 22;
PainlessParser.CATCH = 23;
PainlessParser.THROW = 24;
PainlessParser.THIS = 25;
PainlessParser.INSTANCEOF = 26;
PainlessParser.BOOLNOT = 27;
PainlessParser.BWNOT = 28;
PainlessParser.MUL = 29;
PainlessParser.DIV = 30;
PainlessParser.REM = 31;
PainlessParser.ADD = 32;
PainlessParser.SUB = 33;
PainlessParser.LSH = 34;
PainlessParser.RSH = 35;
PainlessParser.USH = 36;
PainlessParser.LT = 37;
PainlessParser.LTE = 38;
PainlessParser.GT = 39;
PainlessParser.GTE = 40;
PainlessParser.EQ = 41;
PainlessParser.EQR = 42;
PainlessParser.NE = 43;
PainlessParser.NER = 44;
PainlessParser.BWAND = 45;
PainlessParser.XOR = 46;
PainlessParser.BWOR = 47;
PainlessParser.BOOLAND = 48;
PainlessParser.BOOLOR = 49;
PainlessParser.COND = 50;
PainlessParser.COLON = 51;
PainlessParser.REF = 52;
PainlessParser.ARROW = 53;
PainlessParser.FIND = 54;
PainlessParser.MATCH = 55;
PainlessParser.INCR = 56;
PainlessParser.DECR = 57;
PainlessParser.ASSIGN = 58;
PainlessParser.AADD = 59;
PainlessParser.ASUB = 60;
PainlessParser.AMUL = 61;
PainlessParser.ADIV = 62;
PainlessParser.AREM = 63;
PainlessParser.AAND = 64;
PainlessParser.AXOR = 65;
PainlessParser.AOR = 66;
PainlessParser.ALSH = 67;
PainlessParser.ARSH = 68;
PainlessParser.AUSH = 69;
PainlessParser.OCTAL = 70;
PainlessParser.HEX = 71;
PainlessParser.INTEGER = 72;
PainlessParser.DECIMAL = 73;
PainlessParser.STRING = 74;
PainlessParser.REGEX = 75;
PainlessParser.TRUE = 76;
PainlessParser.FALSE = 77;
PainlessParser.NULL = 78;
PainlessParser.TYPE = 79;
PainlessParser.ID = 80;
PainlessParser.DOTINTEGER = 81;
PainlessParser.DOTID = 82;

PainlessParser.RULE_source = 0;
PainlessParser.RULE_afunction = 1;
PainlessParser.RULE_parameters = 2;
PainlessParser.RULE_statement = 3;
PainlessParser.RULE_trailer = 4;
PainlessParser.RULE_block = 5;
PainlessParser.RULE_empty = 6;
PainlessParser.RULE_initializer = 7;
PainlessParser.RULE_afterthought = 8;
PainlessParser.RULE_declaration = 9;
PainlessParser.RULE_decltype = 10;
PainlessParser.RULE_declvar = 11;
PainlessParser.RULE_trap = 12;
PainlessParser.RULE_delimiter = 13;
PainlessParser.RULE_expression = 14;
PainlessParser.RULE_unary = 15;
PainlessParser.RULE_chain = 16;
PainlessParser.RULE_primary = 17;
PainlessParser.RULE_postfix = 18;
PainlessParser.RULE_postdot = 19;
PainlessParser.RULE_callinvoke = 20;
PainlessParser.RULE_fieldaccess = 21;
PainlessParser.RULE_braceaccess = 22;
PainlessParser.RULE_arrayinitializer = 23;
PainlessParser.RULE_listinitializer = 24;
PainlessParser.RULE_mapinitializer = 25;
PainlessParser.RULE_maptoken = 26;
PainlessParser.RULE_arguments = 27;
PainlessParser.RULE_argument = 28;
PainlessParser.RULE_lambda = 29;
PainlessParser.RULE_lamtype = 30;
PainlessParser.RULE_funcref = 31;

function SourceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PainlessParser.RULE_source;
    return this;
}

SourceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceContext.prototype.constructor = SourceContext;

SourceContext.prototype.EOF = function() {
    return this.getToken(PainlessParser.EOF, 0);
};

SourceContext.prototype.afunction = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AfunctionContext);
    } else {
        return this.getTypedRuleContext(AfunctionContext,i);
    }
};

SourceContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

SourceContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterSource(this);
	}
};

SourceContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitSource(this);
	}
};




PainlessParser.SourceContext = SourceContext;

PainlessParser.prototype.source = function() {

    var localctx = new SourceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PainlessParser.RULE_source);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 64;
                this.afunction(); 
            }
            this.state = 69;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 73;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 5)) & ~0x1f) == 0 && ((1 << (_la - 5)) & ((1 << (PainlessParser.LBRACE - 5)) | (1 << (PainlessParser.LP - 5)) | (1 << (PainlessParser.IF - 5)) | (1 << (PainlessParser.WHILE - 5)) | (1 << (PainlessParser.DO - 5)) | (1 << (PainlessParser.FOR - 5)) | (1 << (PainlessParser.CONTINUE - 5)) | (1 << (PainlessParser.BREAK - 5)) | (1 << (PainlessParser.RETURN - 5)) | (1 << (PainlessParser.NEW - 5)) | (1 << (PainlessParser.TRY - 5)) | (1 << (PainlessParser.THROW - 5)) | (1 << (PainlessParser.BOOLNOT - 5)) | (1 << (PainlessParser.BWNOT - 5)) | (1 << (PainlessParser.ADD - 5)) | (1 << (PainlessParser.SUB - 5)))) !== 0) || ((((_la - 56)) & ~0x1f) == 0 && ((1 << (_la - 56)) & ((1 << (PainlessParser.INCR - 56)) | (1 << (PainlessParser.DECR - 56)) | (1 << (PainlessParser.OCTAL - 56)) | (1 << (PainlessParser.HEX - 56)) | (1 << (PainlessParser.INTEGER - 56)) | (1 << (PainlessParser.DECIMAL - 56)) | (1 << (PainlessParser.STRING - 56)) | (1 << (PainlessParser.REGEX - 56)) | (1 << (PainlessParser.TRUE - 56)) | (1 << (PainlessParser.FALSE - 56)) | (1 << (PainlessParser.NULL - 56)) | (1 << (PainlessParser.TYPE - 56)) | (1 << (PainlessParser.ID - 56)))) !== 0)) {
            this.state = 70;
            this.statement();
            this.state = 75;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 76;
        this.match(PainlessParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AfunctionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PainlessParser.RULE_afunction;
    return this;
}

AfunctionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AfunctionContext.prototype.constructor = AfunctionContext;

AfunctionContext.prototype.decltype = function() {
    return this.getTypedRuleContext(DecltypeContext,0);
};

AfunctionContext.prototype.ID = function() {
    return this.getToken(PainlessParser.ID, 0);
};

AfunctionContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

AfunctionContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

AfunctionContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterAfunction(this);
	}
};

AfunctionContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitAfunction(this);
	}
};




PainlessParser.AfunctionContext = AfunctionContext;

PainlessParser.prototype.afunction = function() {

    var localctx = new AfunctionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PainlessParser.RULE_afunction);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        this.decltype();
        this.state = 79;
        this.match(PainlessParser.ID);
        this.state = 80;
        this.parameters();
        this.state = 81;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParametersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PainlessParser.RULE_parameters;
    return this;
}

ParametersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParametersContext.prototype.constructor = ParametersContext;

ParametersContext.prototype.LP = function() {
    return this.getToken(PainlessParser.LP, 0);
};

ParametersContext.prototype.RP = function() {
    return this.getToken(PainlessParser.RP, 0);
};

ParametersContext.prototype.decltype = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DecltypeContext);
    } else {
        return this.getTypedRuleContext(DecltypeContext,i);
    }
};

ParametersContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PainlessParser.ID);
    } else {
        return this.getToken(PainlessParser.ID, i);
    }
};


ParametersContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PainlessParser.COMMA);
    } else {
        return this.getToken(PainlessParser.COMMA, i);
    }
};


ParametersContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterParameters(this);
	}
};

ParametersContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitParameters(this);
	}
};




PainlessParser.ParametersContext = ParametersContext;

PainlessParser.prototype.parameters = function() {

    var localctx = new ParametersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, PainlessParser.RULE_parameters);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 83;
        this.match(PainlessParser.LP);
        this.state = 95;
        _la = this._input.LA(1);
        if(_la===PainlessParser.TYPE) {
            this.state = 84;
            this.decltype();
            this.state = 85;
            this.match(PainlessParser.ID);
            this.state = 92;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===PainlessParser.COMMA) {
                this.state = 86;
                this.match(PainlessParser.COMMA);
                this.state = 87;
                this.decltype();
                this.state = 88;
                this.match(PainlessParser.ID);
                this.state = 94;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        }

        this.state = 97;
        this.match(PainlessParser.RP);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PainlessParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;


 
StatementContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function DeclContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DeclContext.prototype = Object.create(StatementContext.prototype);
DeclContext.prototype.constructor = DeclContext;

PainlessParser.DeclContext = DeclContext;

DeclContext.prototype.declaration = function() {
    return this.getTypedRuleContext(DeclarationContext,0);
};

DeclContext.prototype.delimiter = function() {
    return this.getTypedRuleContext(DelimiterContext,0);
};
DeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterDecl(this);
	}
};

DeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitDecl(this);
	}
};


function BreakContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BreakContext.prototype = Object.create(StatementContext.prototype);
BreakContext.prototype.constructor = BreakContext;

PainlessParser.BreakContext = BreakContext;

BreakContext.prototype.BREAK = function() {
    return this.getToken(PainlessParser.BREAK, 0);
};

BreakContext.prototype.delimiter = function() {
    return this.getTypedRuleContext(DelimiterContext,0);
};
BreakContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterBreak(this);
	}
};

BreakContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitBreak(this);
	}
};


function ForContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ForContext.prototype = Object.create(StatementContext.prototype);
ForContext.prototype.constructor = ForContext;

PainlessParser.ForContext = ForContext;

ForContext.prototype.FOR = function() {
    return this.getToken(PainlessParser.FOR, 0);
};

ForContext.prototype.LP = function() {
    return this.getToken(PainlessParser.LP, 0);
};

ForContext.prototype.SEMICOLON = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PainlessParser.SEMICOLON);
    } else {
        return this.getToken(PainlessParser.SEMICOLON, i);
    }
};


ForContext.prototype.RP = function() {
    return this.getToken(PainlessParser.RP, 0);
};

ForContext.prototype.trailer = function() {
    return this.getTypedRuleContext(TrailerContext,0);
};

ForContext.prototype.empty = function() {
    return this.getTypedRuleContext(EmptyContext,0);
};

ForContext.prototype.initializer = function() {
    return this.getTypedRuleContext(InitializerContext,0);
};

ForContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

ForContext.prototype.afterthought = function() {
    return this.getTypedRuleContext(AfterthoughtContext,0);
};
ForContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterFor(this);
	}
};

ForContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitFor(this);
	}
};


function DoContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DoContext.prototype = Object.create(StatementContext.prototype);
DoContext.prototype.constructor = DoContext;

PainlessParser.DoContext = DoContext;

DoContext.prototype.DO = function() {
    return this.getToken(PainlessParser.DO, 0);
};

DoContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

DoContext.prototype.WHILE = function() {
    return this.getToken(PainlessParser.WHILE, 0);
};

DoContext.prototype.LP = function() {
    return this.getToken(PainlessParser.LP, 0);
};

DoContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

DoContext.prototype.RP = function() {
    return this.getToken(PainlessParser.RP, 0);
};

DoContext.prototype.delimiter = function() {
    return this.getTypedRuleContext(DelimiterContext,0);
};
DoContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterDo(this);
	}
};

DoContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitDo(this);
	}
};


function WhileContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

WhileContext.prototype = Object.create(StatementContext.prototype);
WhileContext.prototype.constructor = WhileContext;

PainlessParser.WhileContext = WhileContext;

WhileContext.prototype.WHILE = function() {
    return this.getToken(PainlessParser.WHILE, 0);
};

WhileContext.prototype.LP = function() {
    return this.getToken(PainlessParser.LP, 0);
};

WhileContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

WhileContext.prototype.RP = function() {
    return this.getToken(PainlessParser.RP, 0);
};

WhileContext.prototype.trailer = function() {
    return this.getTypedRuleContext(TrailerContext,0);
};

WhileContext.prototype.empty = function() {
    return this.getTypedRuleContext(EmptyContext,0);
};
WhileContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterWhile(this);
	}
};

WhileContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitWhile(this);
	}
};


function IneachContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IneachContext.prototype = Object.create(StatementContext.prototype);
IneachContext.prototype.constructor = IneachContext;

PainlessParser.IneachContext = IneachContext;

IneachContext.prototype.FOR = function() {
    return this.getToken(PainlessParser.FOR, 0);
};

IneachContext.prototype.LP = function() {
    return this.getToken(PainlessParser.LP, 0);
};

IneachContext.prototype.ID = function() {
    return this.getToken(PainlessParser.ID, 0);
};

IneachContext.prototype.IN = function() {
    return this.getToken(PainlessParser.IN, 0);
};

IneachContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

IneachContext.prototype.RP = function() {
    return this.getToken(PainlessParser.RP, 0);
};

IneachContext.prototype.trailer = function() {
    return this.getTypedRuleContext(TrailerContext,0);
};
IneachContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterIneach(this);
	}
};

IneachContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitIneach(this);
	}
};


function EachContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

EachContext.prototype = Object.create(StatementContext.prototype);
EachContext.prototype.constructor = EachContext;

PainlessParser.EachContext = EachContext;

EachContext.prototype.FOR = function() {
    return this.getToken(PainlessParser.FOR, 0);
};

EachContext.prototype.LP = function() {
    return this.getToken(PainlessParser.LP, 0);
};

EachContext.prototype.decltype = function() {
    return this.getTypedRuleContext(DecltypeContext,0);
};

EachContext.prototype.ID = function() {
    return this.getToken(PainlessParser.ID, 0);
};

EachContext.prototype.COLON = function() {
    return this.getToken(PainlessParser.COLON, 0);
};

EachContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

EachContext.prototype.RP = function() {
    return this.getToken(PainlessParser.RP, 0);
};

EachContext.prototype.trailer = function() {
    return this.getTypedRuleContext(TrailerContext,0);
};
EachContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterEach(this);
	}
};

EachContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitEach(this);
	}
};


function ThrowContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ThrowContext.prototype = Object.create(StatementContext.prototype);
ThrowContext.prototype.constructor = ThrowContext;

PainlessParser.ThrowContext = ThrowContext;

ThrowContext.prototype.THROW = function() {
    return this.getToken(PainlessParser.THROW, 0);
};

ThrowContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

ThrowContext.prototype.delimiter = function() {
    return this.getTypedRuleContext(DelimiterContext,0);
};
ThrowContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterThrow(this);
	}
};

ThrowContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitThrow(this);
	}
};


function ContinueContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ContinueContext.prototype = Object.create(StatementContext.prototype);
ContinueContext.prototype.constructor = ContinueContext;

PainlessParser.ContinueContext = ContinueContext;

ContinueContext.prototype.CONTINUE = function() {
    return this.getToken(PainlessParser.CONTINUE, 0);
};

ContinueContext.prototype.delimiter = function() {
    return this.getTypedRuleContext(DelimiterContext,0);
};
ContinueContext.prototype.enterRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.enterContinue(this);
	}
};

ContinueContext.prototype.exitRule = function(listener) {
    if(listener instanceof PainlessParserListener ) {
        listener.exitContinue(this);
	}
};


function TryContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

TryContext.prototype = Object.create(StatementContext.prototype);
TryContext.prototype.constructor = TryContext;

PainlessParser.TryContext = TryContext;

TryContext.prototype.TRY = function() {
    return this.getToken(PainlessParser.TRY, 0);
};

TryContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};
